--- a/cocktail-recipes/src/input.css
+++ b/cocktail-recipes/src/input.css
@@ -114,7 +114,7 @@
 		@apply mx-0 flex-nowrap gap-0 text-center text-sm md:mx-auto md:text-base;
 	}
 	.measures-container p {
-		@apply border-customBrown border-b-[1px] px-3;
+		@apply border-customBrown border-b-[1px] md:px-3;
 	}
 	.measures-title {
 		@apply text-customBrown text-sm md:text-lg;
